<resources>
    <string name="app_name">layout_practice_five_recyclerview</string>
    <string name="title">TODO</string>
    <string name="categories">Categories</string>
    <string name="coffee">Coffee</string>
    <string name="dessert">Dessert</string>
    <string name="quick_fix">Quick Fix</string>
    <string name="wine">Wine</string>
    <string name="restaurant">Restaurant</string>
    <string name="hot_today_description">Most popular places for you each day</string>
    <string name="hot_today">Hot Today</string>
    <string name="city_guide">City Guide</string>
    <string name="city_guide_description">We hand-picked some great places for you.</string>
    <string name="view_more">View More</string>
    <string name="background">background</string>
    <string name="event_name">Wendsaday deal</string>
    <string name="event_description">25% off for a table of two</string>
    <string name="content">Dinner 25% off, and only 68USD/each in Solois Coffee</string>
    <string name="item_row_2_background">item_row_2_background</string>
    <string name="checking">Awesome Drinks</string>
    <string name="awesome_drinks">Awesome Drinks</string>
    <string name="healthy_amp_green"><![CDATA[Healthy & Green]]></string>
    <string name="testing">Testing</string>
    <string name="food_name">Soloist Coffee</string>
    <string name="food_description">An elegant place</string>
    <string name="food_image">food_image</string>
    <string name="price">68USD/Each.</string>
    <string name="special_offer_content">Awesome deals unlocked every day</string>
    <string name="special_offer_title">Special Offers</string>
    <string name="columns">Columns</string>
    <string name="best_brunch_places">Best Brunch Places</string>
    <string name="eating_alone">Eating Alone</string>
    <string name="party_every_night">Party Every Night</string>
    <string name="select_text">Select</string>
    <string name="store_text">Store</string>
    <string name="magazine_text">Magazine</string>
    <string name="cart_text">Cart</string>
    <string name="me_text">Me</string>
    <string name="_120">120$</string>
</resources>
