<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/food"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#ffffff"
    tools:context=".MainActivity">

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/view_pager_position"
        android:layout_width="match_parent"
        android:layout_height="321dp"
        android:layout_marginStart="@dimen/dp20"
        android:layout_marginTop="@dimen/dp17"
        android:layout_marginBottom="@dimen/dp17"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hot_today_description" />

    <View
        android:id="@+id/line_two"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp1"
        android:layout_marginStart="@dimen/dp20"
        android:layout_marginTop="@dimen/dp20"
        android:layout_marginEnd="@dimen/dp20"
        android:background="#dcdcdc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view_pager_position" />

    <TextView
        android:id="@+id/category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp14"
        android:text="@string/categories"
        android:textColor="#9b9b9b"
        android:textSize="@dimen/sp15"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/line_two" />

    <Button
        android:id="@+id/restaurant"
        android:layout_width="@dimen/dp29"
        android:layout_height="@dimen/dp35"
        android:layout_marginStart="@dimen/dp39"
        android:layout_marginTop="@dimen/dp21"
        android:background="@drawable/ic_restaurant"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/category" />

    <Button
        android:id="@+id/coffee"
        android:layout_width="@dimen/dp29"
        android:layout_height="@dimen/dp38"
        android:layout_marginTop="@dimen/dp21"
        android:layout_marginEnd="@dimen/dp32"
        android:background="@drawable/ic_coffee"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/category" />

    <Button
        android:id="@+id/quick_fix"
        android:layout_width="@dimen/dp41"
        android:layout_height="@dimen/dp32"
        android:layout_marginTop="@dimen/dp21"
        android:background="@drawable/ic_quick_fix"
        app:layout_constraintEnd_toStartOf="@+id/coffee"
        app:layout_constraintStart_toEndOf="@+id/restaurant"
        app:layout_constraintTop_toBottomOf="@+id/category" />

    <Button
        android:id="@+id/wine"
        android:layout_width="@dimen/dp29"
        android:layout_height="@dimen/dp37"
        android:layout_marginTop="@dimen/dp21"
        android:background="@drawable/ic_wine"
        app:layout_constraintEnd_toStartOf="@+id/quick_fix"
        app:layout_constraintStart_toEndOf="@+id/restaurant"
        app:layout_constraintTop_toBottomOf="@+id/category" />

    <Button
        android:id="@+id/dessert"
        android:layout_width="@dimen/dp33"
        android:layout_height="@dimen/dp34"
        android:layout_marginTop="@dimen/dp21"
        android:background="@drawable/ic_dessert"
        app:layout_constraintEnd_toStartOf="@+id/coffee"
        app:layout_constraintStart_toEndOf="@+id/category"
        app:layout_constraintTop_toBottomOf="@+id/category" />

    <TextView
        android:id="@+id/text_restaurant"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp14"
        android:text="@string/restaurant"
        android:textColor="#232524"
        android:textSize="@dimen/sp13"
        app:layout_constraintEnd_toEndOf="@+id/restaurant"
        app:layout_constraintStart_toStartOf="@+id/restaurant"
        app:layout_constraintTop_toBottomOf="@+id/restaurant" />

    <TextView
        android:id="@+id/text_wine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp12"
        android:text="@string/wine"
        android:textColor="#232524"
        android:textSize="@dimen/sp13"
        app:layout_constraintEnd_toEndOf="@+id/wine"
        app:layout_constraintStart_toStartOf="@+id/wine"
        app:layout_constraintTop_toBottomOf="@+id/wine" />

    <TextView
        android:id="@+id/text_quick_fix"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp17"
        android:text="@string/quick_fix"
        android:textColor="#232524"
        android:textSize="@dimen/sp13"
        app:layout_constraintEnd_toEndOf="@+id/quick_fix"
        app:layout_constraintStart_toStartOf="@+id/quick_fix"
        app:layout_constraintTop_toBottomOf="@+id/quick_fix" />

    <TextView
        android:id="@+id/text_dessert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dessert"
        android:textColor="#232524"
        android:textSize="@dimen/sp13"
        app:layout_constraintBottom_toBottomOf="@+id/text_quick_fix"
        app:layout_constraintEnd_toEndOf="@+id/dessert"
        app:layout_constraintHorizontal_bias="0.558"
        app:layout_constraintStart_toStartOf="@+id/dessert" />

    <TextView
        android:id="@+id/text_coffee"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/coffee"
        android:textColor="#232524"
        android:textSize="@dimen/sp13"
        app:layout_constraintBottom_toBottomOf="@+id/text_dessert"
        app:layout_constraintEnd_toEndOf="@+id/coffee"
        app:layout_constraintStart_toStartOf="@+id/coffee" />

    <View
        android:id="@+id/line_three"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp1"
        android:layout_marginStart="@dimen/dp20"
        android:layout_marginTop="@dimen/dp13"
        android:layout_marginEnd="@dimen/dp20"
        android:background="#dcdcdc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_restaurant" />

    <TextView
        android:id="@+id/hot_today_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp20"
        android:fontFamily="sans-serif"
        android:text="@string/hot_today_description"
        android:textColor="#6c6f74"
        android:textSize="@dimen/sp15"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hot_today" />

    <TextView
        android:textStyle="bold"
        android:id="@+id/hot_today"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp20"
        android:layout_marginTop="@dimen/dp26"
        android:fontFamily="sans-serif"
        android:text="@string/hot_today"
        android:textColor="#121212"
        android:textSize="@dimen/sp21"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:textStyle="bold"
        android:id="@+id/city_guide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp20"
        android:layout_marginTop="@dimen/dp28"
        android:text="@string/city_guide"
        android:textColor="#121212"
        android:textSize="@dimen/sp21"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/line_three" />

    <TextView
        android:id="@+id/city_guide_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp20"
        android:text="@string/city_guide_description"
        android:textColor="#6c6f74"
        android:textSize="@dimen/sp15"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/city_guide" />

    <TextView
        android:id="@+id/view_more"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp25"
        android:layout_marginEnd="@dimen/dp22"
        android:text="@string/view_more"
        android:textColor="#c25351"
        android:textSize="@dimen/sp13"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/line_four" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycle_view_two"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp20"
        android:layout_marginTop="@dimen/dp19"
        app:layout_constraintBottom_toTopOf="@id/line_four"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/city_guide_description" />

    <View
        android:id="@+id/line_four"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:background="#dcdcdc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/recycle_view_two" />

    <TextView
        android:textStyle="bold"
        android:id="@+id/special_offers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="25dp"
        android:text="@string/special_offer_title"
        android:textColor="#121212"
        android:textSize="21sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/line_four" />

    <TextView
        android:textSize="15sp"
        android:textColor="#6c6f74"
        android:id="@+id/special_offers_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="0dp"
        android:text="@string/special_offer_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/special_offers" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view_three"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="18dp"
        android:layout_marginBottom="22dp"
        app:layout_constraintBottom_toTopOf="@id/line_five"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/special_offers_description" />

    <View
        android:id="@+id/line_five"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="22dp"
        android:layout_marginEnd="20dp"
        android:background="#dcdcdc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/recycler_view_three" />

    <TextView
        android:textSize="21sp"
        android:textColor="#121212"
        android:textStyle="bold"
        android:id="@+id/columns"
        android:layout_marginTop="33dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/columns"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/line_five" />

    <View
        android:id="@+id/line_six"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="20dp"
        android:background="#dcdcdc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/columns" />

    <TextView
        android:textSize="15sp"
        android:textColor="#121212"
        android:textStyle="bold"
        android:id="@+id/best_brunch_places"
        android:layout_marginTop="13dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/best_brunch_places"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/line_six" />

    <View
        android:id="@+id/line_seven"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="20dp"
        android:background="#dcdcdc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/best_brunch_places" />

    <TextView
        android:textSize="15sp"
        android:textColor="#121212"
        android:textStyle="bold"
        android:id="@+id/eating_alone"
        android:layout_marginTop="14dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/eating_alone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/line_seven" />

    <View
        android:id="@+id/line_eight"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="20dp"
        android:background="#dcdcdc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/eating_alone" />

    <TextView
        android:textSize="15sp"
        android:textColor="#121212"
        android:textStyle="bold"
        android:id="@+id/party_every_night"
        android:layout_marginTop="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/party_every_night"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/line_eight" />

    <View
        android:id="@+id/line_nine"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="@dimen/dp20"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:background="#dcdcdc"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/party_every_night" />

    <Button
        android:background="@drawable/ic_arrow"
        android:id="@+id/best_brunch_places_button"
        android:layout_width="5.5dp"
        android:layout_height="10dp"
        android:layout_marginEnd="23dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/best_brunch_places" />

    <Button
        android:background="@drawable/ic_arrow"
        android:id="@+id/eating_alone_button"
        android:layout_width="5.5dp"
        android:layout_height="10dp"
        android:layout_marginEnd="23dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/eating_alone" />

    <Button
        android:background="@drawable/ic_arrow"
        android:id="@+id/party_every_night_button"
        android:layout_width="5.5dp"
        android:layout_height="10dp"
        android:layout_marginEnd="23dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/party_every_night" />

    <TextView
        android:textSize="@dimen/sp13"
        android:id="@+id/pagination"
        android:textColor="#121212"
        android:text="Hello giao su"
        android:layout_marginTop="@dimen/dp32"
        android:layout_marginEnd="@dimen/dp19"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/head_pagination"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="2dp"
        android:text="Hello Giao Su"
        android:textColor="#121212"
        android:textSize="@dimen/sp17"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/pagination"
        app:layout_constraintEnd_toStartOf="@id/pagination" />

</androidx.constraintlayout.widget.ConstraintLayout>