<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/title"
        android:layout_width="94dp"
        android:layout_height="22dp"
        android:layout_marginTop="36dp"
        android:contentDescription="@string/title"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_foodi" />

    <Button
        android:id="@+id/search"
        android:layout_width="16dp"
        android:layout_height="16dp"
        android:layout_marginTop="34dp"
        android:layout_marginEnd="14dp"
        android:background="@drawable/ic_search_5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="5dp"
        android:background="#dcdcdc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title" />

    <include
        android:id="@+id/main"
        layout="@layout/scroll"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/bottom_menu"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/line" />

    <View
        android:layout_marginBottom="0dp"
        android:id="@+id/bottom_menu"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="55dp"
        android:background="#f9f9f9"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:background="@drawable/ic_select"
        android:id="@+id/select"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="@id/bottom_menu"
        app:layout_constraintTop_toTopOf="@id/bottom_menu" />

    <Button
        android:background="@drawable/ic_me"
        android:id="@+id/me"
        android:layout_marginTop="0dp"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginEnd="30dp"
        app:layout_constraintEnd_toEndOf="@id/bottom_menu"
        app:layout_constraintTop_toTopOf="@id/select" />

    <Button
        android:background="@drawable/ic_magazine"
        android:id="@+id/magazine"
        android:layout_marginTop="0dp"
        android:layout_width="20dp"
        android:layout_height="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/select" />

    <Button
        android:background="@drawable/ic_store"
        android:id="@+id/store"
        android:layout_marginTop="0dp"
        android:layout_width="20dp"
        android:layout_height="20dp"
        app:layout_constraintStart_toEndOf="@id/select"
        app:layout_constraintEnd_toStartOf="@id/magazine"
        app:layout_constraintTop_toTopOf="@id/select" />

    <Button
        android:background="@drawable/ic_cart"
        android:id="@+id/cart"
        android:layout_marginTop="0dp"
        android:layout_width="20dp"
        android:layout_height="20dp"
        app:layout_constraintStart_toEndOf="@id/magazine"
        app:layout_constraintEnd_toStartOf="@id/me"
        app:layout_constraintTop_toTopOf="@id/select" />

    <TextView
        android:textSize="10sp"
        android:textColor="#232524"
        android:id="@+id/select_text"
        android:layout_marginTop="3dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_text"
        app:layout_constraintEnd_toEndOf="@id/select"
        app:layout_constraintStart_toStartOf="@id/select"
        app:layout_constraintTop_toBottomOf="@id/select"
        tools:ignore="SmallSp" />

    <TextView
        android:textSize="10sp"
        android:textColor="#929292"
        android:id="@+id/store_text"
        android:layout_marginTop="3dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/store_text"
        app:layout_constraintEnd_toEndOf="@id/store"
        app:layout_constraintStart_toStartOf="@id/store"
        app:layout_constraintTop_toBottomOf="@id/store"
        tools:ignore="SmallSp" />

    <TextView
        android:textSize="10sp"
        android:textColor="#929292"
        android:id="@+id/magazine_text"
        android:layout_marginTop="3dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/magazine_text"
        app:layout_constraintEnd_toEndOf="@id/magazine"
        app:layout_constraintStart_toStartOf="@id/magazine"
        app:layout_constraintTop_toBottomOf="@id/magazine"
        tools:ignore="SmallSp" />

    <TextView
        android:textSize="10sp"
        android:textColor="#929292"
        android:id="@+id/cart_text"
        android:layout_marginTop="3dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cart_text"
        app:layout_constraintEnd_toEndOf="@id/cart"
        app:layout_constraintStart_toStartOf="@id/cart"
        app:layout_constraintTop_toBottomOf="@id/cart"
        tools:ignore="SmallSp" />

    <TextView
        android:textSize="10sp"
        android:textColor="#929292"
        android:id="@+id/me_text"
        android:layout_marginTop="3dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/me_text"
        app:layout_constraintEnd_toEndOf="@id/me"
        app:layout_constraintStart_toStartOf="@id/me"
        app:layout_constraintTop_toBottomOf="@id/me"
        tools:ignore="SmallSp" />


</androidx.constraintlayout.widget.ConstraintLayout>